--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -7,6 +7,7 @@ es:
         date_of_birth: Fecha de nacimiento
         gender: Género
         postal_code: Código postal
+        profession: Profesión
   decidim:
     components:
       extra_user_fields:
